--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <title>Evaluation</title>
 <h1>Bienvenue sur votre projet Métriques</h1>
-<h2>Ceci est le projet de : Prénom Nom</h2>
-<p>Si vous avez mis en ligne votre solution et si cette page d'accueil s'affiche dans votre navigateur alors <b>vous avez déjà gagné 4 points</b> sur votre note d'évaluation.</p>
+<h2>Ceci est le projet de : Vincent DRABCZUK</h2>
+<p>Si vous avez mis en ligne votre solution et si cette page d'accueil s'affiche dans votre navigateur alors <b>vous avez déjà gagné 20 points</b> sur votre note d'évaluation.</p>
 <p>Notions acquises lors de cette étape : Vous avez lors cette première étape apris à créer votre hébergement en ligne sur Alwaydata, installer une application, Forker un projet GitHUB et créer des Secrets qui seront utilisés lors de vos Commits pour mettre à jour votre site en ligne</p>
 <p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
 <h3>Exercice 1 : Personnaliser votre page d'accueil (1 point)</h3>
