--- a/templates/svp.html
+++ b/templates/svp.html
@@ -7,20 +7,22 @@
 <body>
 
 <h2>svp mettez moi 20</h2>
-<form action="traitement.php" method="post">
-    Nom: <input type="text" name="nom" required>
+<form>
+    Nom: <input type="text">
     <br><br>
-    Prénom: <input type="text" name="prenom" required>
+    Prénom: <option value="20">20</option>
     <br><br>
     Avis:
-    <textarea name="avis" rows="5" cols="40" required></textarea>
+    <textarea></textarea>
     <br><br>
     Note (sur 20): 
-    <select name="note" required>
-        <option value="20">20</option>
+    <select>
+        <option>20</option>
+        <option>21</option>
+        <option>22</option>
     </select>
     <br><br>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" type="submit" value="Surprise">
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" type="button" value="Surprise">
 </form>
 
 </body>
