--- a/templates/svp.html
+++ b/templates/svp.html
@@ -7,10 +7,10 @@
 <body>
 
 <h2>svp mettez moi 20</h2>
-<form>
+<form action="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
     Nom: <input type="text">
     <br><br>
-    Prénom: <option value="20">20</option>
+    Prénom: <input type="text">
     <br><br>
     Avis:
     <textarea></textarea>
@@ -22,7 +22,7 @@
         <option>22</option>
     </select>
     <br><br>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" type="button" value="Surprise">
+    <button type="submit">Surprise</button>
 </form>
 
 </body>
