--- a/templates/svp.html
+++ b/templates/svp.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>svp monsieur</title>
+    <title>contact</title>
 </head>
 <body>
 
-<h2>svp mettez moi 20</h2>
-<form action="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+<h2>je suis actuellement bloqué sur la question 4 et la 6</h2>
+<form action="https://perdu.com">
     Nom: <input type="text">
     <br><br>
     Prénom: <input type="text">
