--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -4,16 +4,17 @@
     <script type="text/javascript">
       google.charts.load("current", {packages:["corechart"]});
       google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        
+      
+      function drawChart(data) {
+        // Convertir les données récupérées en un tableau utilisable par Google Charts
         var dataTable = new google.visualization.DataTable();
         dataTable.addColumn('string', 'Date');
         dataTable.addColumn('number', 'Valeur');
         data.results.forEach(entry => {
           var date = new Date(entry.Jour * 1000);
           dataTable.addRow([date.toLocaleDateString(), entry.temp]);
-        });
-
+       });
+        
         var options = {
           title: 'Évolution des températures de Paris pour les 16 prochains jours',
           legend: { position: 'none' },
