--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -22,6 +22,11 @@
 
         var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
         chart.draw(data, options);
+
+        fetch('/paris/')
+        .then(response => response.json())
+        .then(data => {
+        drawChart(data);
       }
     </script>
   </head>
