--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -4,7 +4,8 @@
     <script type="text/javascript">
       google.charts.load("current", {packages:["corechart"]});
       google.charts.setOnLoadCallback(drawChart);
-      
+
+      function drawBackgroundColor() {
       function drawChart(data) {
         // Convertir les données récupérées en un tableau utilisable par Google Charts
         var dataTable = new google.visualization.DataTable();
