--- a/templates/commits.html
+++ b/templates/commits.html
@@ -1,1 +1,49 @@
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Commits</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  </head>
+  <body>
+    <div id="chart_div"></div>
+    <script>
+      google.charts.load('current', { packages: ['corechart'] });
+      google.charts.setOnLoadCallback(drawBackgroundColor);
+     function drawBackgroundColor() {
+    function drawChart(data) {
+    // Convertir les données récupérées en un tableau utilisable par Google Charts
+    var dataTable = new google.visualization.DataTable();
+    dataTable.addColumn('string', 'Date');
+    dataTable.addColumn('number', 'Valeur');
+    data.results.forEach(entry => {
+      var date = new Date(entry.Jour * 1000);
+      dataTable.addRow([date.toLocaleDateString(), entry.temp]);
+    });
+    // Configurer les options du graphique en ligne
+    var options = {
+      title: 'Commits par minute',
+      legend: 'none'
 
+    };
+    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+    chart.draw(dataTable, options);
+  }
+  // Récupération de données depuis votre API
+  async function loadCommitData() {
+            const response = await fetch('https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits');
+            const commits = await response.json();
+            const dataArray = [];
+
+            commits.forEach(commit => {
+                // Extrait la date complète du commit
+                const fullDate = commit.commit.author.date;
+                // Convertit cette date en un format lisible
+                const date = new Date(fullDate);
+                const dateString = date.toISOString();
+                // Ajoute la date et un nombre de commits de 1 pour chaque commit au tableau
+                dataArray.push([dateString, 1]);
+            });
+}
+    </script>
+  </body>
+</html>
