--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,12 @@
 <!doctype html>
 <title>Evaluation</title>
+<ul>
+  <li><a href="https://urlvincent.alwaysdata.net/">hello</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/contact/">contact</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/graphique/">graphique</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/histogramme/">histogramme</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/commits/">commits</a></li>
+</ul>
 <h1>Bienvenue sur votre projet Métriques</h1>
 <h2>Ceci est le projet de : Vincent DRABCZUK</h2>
 <p>Si vous avez mis en ligne votre solution et si cette page d'accueil s'affiche dans votre navigateur alors <b>vous avez déjà gagné 20 points</b> sur votre note d'évaluation.</p>
