--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,7 +3,7 @@
 <ul>
   <li><a href="https://urlvincent.alwaysdata.net/">hello</a></li>
   <li><a href="https://urlvincent.alwaysdata.net/contact/">contact</a></li>
-  <li><a href="https://urlvincent.alwaysdata.net/graphique/">graphique</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/rapport/">graphique</a></li>
   <li><a href="https://urlvincent.alwaysdata.net/histogramme/">histogramme</a></li>
   <li><a href="https://urlvincent.alwaysdata.net/commits/">commits</a></li>
 </ul>
