--- a/templates/svp.html
+++ b/templates/svp.html
@@ -5,7 +5,13 @@
     <title>contact</title>
 </head>
 <body>
-
+<ul>
+  <li><a href="https://urlvincent.alwaysdata.net/">hello</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/contact/">contact</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/rapport/">graphique</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/histogramme/">histogramme</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/commits/">commits</a></li>
+</ul>
 <h2>je suis actuellement bloqué sur la question 4 et la 6</h2>
 <form action="https://perdu.com">
     Nom: <input type="text">
