--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -5,6 +5,13 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
   <body>
+    <ul>
+  <li><a href="https://urlvincent.alwaysdata.net/">hello</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/contact/">contact</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/rapport/">graphique</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/histogramme/">histogramme</a></li>
+  <li><a href="https://urlvincent.alwaysdata.net/commits/">commits</a></li>
+</ul>
     <div id="chart_div"></div>
     <script>
       google.charts.load('current', { packages: ['corechart'] });
