--- a/templates/commits.html
+++ b/templates/commits.html
@@ -27,6 +27,7 @@
             var options = {
                 title: 'Commits par minute',
                 minValue: 0,
+                viewWindow: {min: 0},
                 legend: 'none'
             };
 
