--- a/templates/commits.html
+++ b/templates/commits.html
@@ -15,42 +15,54 @@
     <div id="chart_div"></div>
     <script>
       google.charts.load('current', { packages: ['corechart'] });
-      function drawChart(dataArray) {
-            var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Date');
-            data.addColumn('number', 'Valeur');
+      function drawChart() {
+        fetchData().then(commitData => {
+          const data = new google.visualization.DataTable();
+          data.addColumn('string', 'DateTime');
+          data.addColumn('number', 'Commits');
 
-            dataArray.forEach(function (row) {
-                data.addRow(row);
-            });
+          data.addRows(commitData);
 
-            var options = {
-                title: 'Commits par minute',
-                minValue: 0,
-                viewWindow: {min: 0},
-                legend: 'none'
-            };
+          var options = {
+            title: 'Nb de commits par minute',
+            hAxis: {title: 'Date'},
+            vAxis: {
+              title: 'Commits',
+              minValue: 0, // Ensure the minimum value of y-axis is set to 0
+              viewWindow: {
+                min: 0 // Explicitly sets the minimum value of the vertical axis to 0
+              }
+            },
+            legend: 'none'
+          };
 
-            var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-            chart.draw(data, options);
-        }
+          var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+          chart.draw(data, options);
+        });
+      }
 
-        async function loadCommitData() {
-            const response = await fetch('https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits');
-            const commits = await response.json();
-            const dataArray = [];
+      async function fetchData() {
+        const response = await fetch('https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits');
+        const commits = await response.json();
+        const commitCountPerDateTime = {};
 
-            commits.forEach(commit => {
-                const fullDate = commit.commit.author.date;
-                const date = new Date(fullDate);
-                const dateString = date.toISOString();
-                dataArray.push([dateString, 1]);
-            });
+        // Process commits to count per day and hour
+        commits.forEach(commit => {
+          const date = new Date(commit.commit.author.date);
+          const day = date.toISOString().split('T')[0]; // YYYY-MM-DD
+          const time = date.toISOString().split('T')[1].substring(0, 5); // HH:MM
+          const dateTimeStr = `${day} ${time}`;
 
-            drawChart(dataArray);
-        }
+          if (commitCountPerDateTime[dateTimeStr]) {
+            commitCountPerDateTime[dateTimeStr] += 1;
+          } else {
+            commitCountPerDateTime[dateTimeStr] = 1;
+          }
+        });
 
-        google.charts.setOnLoadCallback(loadCommitData);
+        // Convert to array format suitable for Google Charts
+        return Object.keys(commitCountPerDateTime).map(dateTime => [dateTime, commitCountPerDateTime[dateTime]]);
+      }
     </script>
   </body>
 </html>
