--- a/templates/commits.html
+++ b/templates/commits.html
@@ -25,8 +25,8 @@
           data.addRows(commitData);
 
           var options = {
-            title: 'Nb de commits par minute',
-            hAxis: {title: 'Date'},
+            title: 'Commit Activity (Day and Hour)',
+            hAxis: {title: 'DateTime', slantedText: true, slantedTextAngle: 45},
             vAxis: {
               title: 'Commits',
               minValue: 0, // Ensure the minimum value of y-axis is set to 0
@@ -43,7 +43,7 @@
       }
 
       async function fetchData() {
-        const response = await fetch('https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits');
+        const response = await fetch('https://api.github.com/repos/lealaroze/5MCSI_Metriques/commits');
         const commits = await response.json();
         const commitCountPerDateTime = {};
 
