--- a/templates/commits.html
+++ b/templates/commits.html
@@ -16,54 +16,45 @@
     <script>
       google.charts.load('current', { packages: ['corechart'] });
       google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
-        fetchData().then(commitData => {
-          const data = new google.visualization.DataTable();
-          data.addColumn('string', 'DateTime');
-          data.addColumn('number', 'Commits');
+      function drawChart(dataArray) {
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Date');
+            data.addColumn('number', 'Nb de commit');
 
-          data.addRows(commitData);
+            dataArray.forEach(function (row) {
+                data.addRow(row);
+            });
 
-          var options = {
-            title: 'Commit Activity (Day and Hour)',
-            hAxis: {title: 'DateTime', slantedText: true, slantedTextAngle: 45},
-            vAxis: {
-              title: 'Commits',
-              minValue: 0, // Ensure the minimum value of y-axis is set to 0
-              viewWindow: {
-                min: 0 // Explicitly sets the minimum value of the vertical axis to 0
-              }
-            },
-            legend: 'none'
-          };
+            var options = {
+                title: 'Commits par Timestamp',
+                hAxis: { title: 'Date', slantedText: true, slantedTextAngle: 45 },
+                vAxis: { title: 'Nb de commit' },
+                legend: 'none'
+            };
 
-          var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-          chart.draw(data, options);
-        });
-      }
+            var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+            chart.draw(data, options);
+        }
 
-      async function fetchData() {
-        const response = await fetch('https://api.github.com/repos/lealaroze/5MCSI_Metriques/commits');
-        const commits = await response.json();
-        const commitCountPerDateTime = {};
+        async function loadCommitData() {
+            const response = await fetch('https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits');
+            const commits = await response.json();
+            const dataArray = [];
 
-        // Process commits to count per day and hour
-        commits.forEach(commit => {
-          const date = new Date(commit.commit.author.date);
-          const day = date.toISOString().split('T')[0]; // YYYY-MM-DD
-          const time = date.toISOString().split('T')[1].substring(0, 5); // HH:MM
-          const dateTimeStr = `${day} ${time}`;
+            commits.forEach(commit => {
+                
+                const fullDate = commit.commit.author.date;
+              
+                const date = new Date(fullDate);
+                const dateString = date.toISOString();
+                
+                dataArray.push([dateString, 1]);
+            });
 
-          if (commitCountPerDateTime[dateTimeStr]) {
-            commitCountPerDateTime[dateTimeStr] += 1;
-          } else {
-            commitCountPerDateTime[dateTimeStr] = 1;
-          }
-        });
+            drawChart(dataArray);
+        }
 
-        // Convert to array format suitable for Google Charts
-        return Object.keys(commitCountPerDateTime).map(dateTime => [dateTime, commitCountPerDateTime[dateTime]]);
-      }
+        google.charts.setOnLoadCallback(loadCommitData);
     </script>
   </body>
 </html>
