--- a/templates/commits.html
+++ b/templates/commits.html
@@ -26,7 +26,7 @@
             });
 
             var options = {
-                title: 'Commits par Timestamp',
+                title: 'Nb commits/minute',
                 hAxis: { title: 'Date', slantedText: true, slantedTextAngle: 45 },
                 vAxis: { title: 'Nb de commit' },
                 legend: 'none'
