--- a/templates/svp.html
+++ b/templates/svp.html
@@ -12,7 +12,7 @@
   <li><a href="https://urlvincent.alwaysdata.net/histogramme/">histogramme</a></li>
   <li><a href="https://urlvincent.alwaysdata.net/commits/">commits</a></li>
 </ul>
-<h2>je suis actuellement bloqué sur la question 4 et la 6</h2>
+<h2>une bonne note par pitié</h2>
 <form action="https://perdu.com">
     Nom: <input type="text">
     <br><br>
